# DiFRa

./: LICENSE  README.md  star_data.csv
.github/: gen_star_chart.py
.github/workflows/: star_chart.yml
DiFRa/: runner.py
DiFRa/src/dataset/: load_dataset.py
DiFRa/src/models/: modeling_diffuser.py  modeling_qag.py
DiFRa/src/models/diffusion/: dpm_solver_pytorch.py  gaussian_diffusion.py  step_sample.py  transformer_model.py
DiFRa/src/prompt/: prompt.py
DiFRa/src/utils/: data_collator.py  dataset_utils.py  trainer.py
Evalution/: run_evaluation.py  run_evaluation_tradition.py  run_stage_with_llm.py  runner.py
Evalution/src/metrics/consistency/: consistency_assessor.py
Evalution/src/utils/: normalize_data.py
iworkplace/: README.md  pyproject.toml
iworkplace/examples/deepspeed/: ds_z2_offload_config.json  ds_z3_offload_config.json
iworkplace/examples/scripts/: run.sh
iworkplace/src/: train.py
iworkplace/src/iworkplace/: cli.py  launcher.py
iworkplace/src/iworkplace/data/: load_dataset.py  loader.py
iworkplace/src/iworkplace/extras/: misc.py
iworkplace/src/iworkplace/hparams/: __init__.py  data_args.py  finetuning_args.py  model_args.py
iworkplace/src/iworkplace/models/: modeling_diffuser.py  modeling_qag.py
iworkplace/src/iworkplace/models/diffusion/: gaussian_diffusion.py  transformer_model.py
iworkplace/src/iworkplace/models/diffusion/utils/: nn.py
iworkplace/src/iworkplace/prompt/: prompt.py
iworkplace/src/iworkplace/train/: tuner.py
iworkplace/src/iworkplace/utils/: data_collator.py  dataset_utils.py  loader.py  trainer.py
(+1 files in other folders)
